# fundhub-build-rust

./: .env.example  .gitignore  BACKEND_DOCUMENTATION.md  BUILD_INSTRUCTIONS.md  CONTINUATION_PROGRESS.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEP_BY_STEP.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEVELOPMENT.md  Dockerfile  Dockerfile.render  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  SETUP_NOW.md  SIMPLE_SOROBAN.md  SOROBAN_OPTIONS.md  STUDENT_VERIFICATION_REFACTOR_SUMMARY.md  USER_LIFECYCLE_GUIDE.md  VERIFICATION_FLOW_TEST.md  WALLET_FIXES_SUMMARY.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  init-db.sh  production-config.md  render-env.md  render.yaml  setup-db.sh  setup-existing-db.sh  setup-production-db.sh
contracts/: deploy.sh
docker/: soroban-lite.Dockerfile  soroban-minimal.Dockerfile  soroban.Dockerfile
migrations/: 20250120000000_add_notifications_table.sql  20250120000001_make_wallets_user_flexible.sql  20250120000002_add_default_admin_user.sql  20250120000003_enhance_student_verification.sql  20250120000004_add_platform_donations.sql  20250120000005_add_stellar_wallet_tables.sql  20251020000000_initial_schema.sql  20251020010000_add_student_verification_cols.sql  20251020011000_add_campaigns_and_analytics.sql  20251020012000_add_campaign_distributions_and_analytics_tables.sql  20251020013000_add_missing_tables_and_columns.sql  20251020014000_fix_not_null_constraints.sql  20251020015000_add_role_system_and_guest_flow.sql  20251020020000_add_smart_contracts_integration.sql  20251020030000_add_payment_providers.sql
scripts/: add-sample-notifications.sql  contracts-docker.sh  deploy-contracts-simple.sh  dev-backend-simple.sh  dev-backend.sh  dev-full.sh  dev-setup.sh  run_migrations.sh  skip-soroban.sh  soroban-docker-fixed.sh  soroban-docker.sh  soroban-download.sh  soroban-offline.sh  soroban-simple.sh  start-dev.sh
(+49 files in other folders)
